--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 					<nav class="header__menu">
 						<ul class="header__items">
 							<li class="header__item">
-								<a href="index.html" class="header__link">Главная страница</a>
+								<a href="index.html" class="header__link-first">Главная страница</a>
 							</li>
 							<li class="header__item">
 								<a href="company.html" class="header__link">Компания
