--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 								миллионы</div>
 							<div class="top__row">
 								<div class="top__row-img">
-									<a href="https://www.pinterest.com/"><img
+									<a href="https://www.pinterest.com/"><img 
 											src="images/Pintrest-footer.svg"
 											alt="Pintrest-top image"></a>
 									<a href="https://www.behance.net/"><img src="images/Behance-footer.svg"
@@ -87,7 +87,7 @@
 							</div>
 						</div>
 						<div class="top__image">
-						<img src="images/unicorn.webp" alt="Unicorn bg image"></div>
+						<img src="images/Unicorn-svg.svg" alt="Unicorn bg image"></div>
 					</div>
 				</div>
 			</main>
