--- a/company.html
+++ b/company.html
@@ -50,44 +50,85 @@
 			</header>
 			<main class="main">
 				<div class="block-yellow"></div>
-				<div class="top">
-					<div class="top__container _container">
-						<div class="top__column">
-							<div class="top__title">Мы создаем мобильные игры, в которые играют
-								миллионы</div>
-							<div class="top__row">
-								<div class="top__row-img">
-									<a href="https://www.pinterest.com/"><img 
+				<div class="about-company">
+					<div class="about-company__container _container">
+						<div class="about-company__column">
+							<div class="about-company__title">О Студии</div>
+							<div class="about-company__row">
+								<div class="about-company__row-img">
+									<a href="https://www.pinterest.com/"><img
 											src="images/Pintrest-footer.svg"
-											alt="Pintrest-top image"></a>
+											alt="Pintrest-about-company image"></a>
 									<a href="https://www.behance.net/"><img src="images/Behance-footer.svg"
-											alt="Behance-top image"></a>
+											alt="Behance-about-company image"></a>
 									<a href="https://dribbble.com/"><img src="images/Dribbble-footer.svg"
-											alt="Dribbble-top image"></a>
+											alt="Dribbble-about-company image"></a>
 									<a href="https://www.snapchat.com/"><img
 											src="images/Snapchat-footer.svg"
-											alt="Snapchat-top image"></a>
+											alt="Snapchat-about-company image"></a>
 									<a href="https://linkedin.com/"><img src="images/Linkedin-footer.svg"
-											alt="Linkedin-top image"></a>
+											alt="Linkedin-about-company image"></a>
 									<a href="https://www.facebook.com/"><img
 											src="images/Facebook-footer.svg"
-											alt="Facebook-top image"></a>
+											alt="Facebook-about-company image"></a>
 								</div>
-								<div class="top__romb">
-									<div class="top__text-romb"><a href="#"> Узнать
-										подробнее</a></div>
-									<div class="top__romb-row">
-									<a href="#"><img src="images/Arrow-main.svg" alt="Arrow imge"></a>	
-									</div>
-								</div>
-								<div class="top__text">
-									«Оригинальные идеи, качество реализации игровых механик и внимание к
-									деталям интерфейса - наши основные принципы.»
+								<div class="about-company__text">
+									Toy.Stream сегодня — это команда из более 500 человек и офисы по всему
+									миру. Мы входим в топ-10 игровых разработчиков по установкам — общее
+									количество загрузок перевалило за 2 млрд, а ежемесячная аудитория
+									составляет более 250 млн игроков.
+									В разработке у нас всегда находится более десяти проектов одновременно.
+									Мы постоянно экспериментируем, ищем новые тренды и пробуем себя в новых
+									жанрах.
 								</div>
 							</div>
 						</div>
-						<div class="top__image">
-						<img src="images/Unicorn-svg.svg" alt="Unicorn bg image"></div>
+						<div class="about-company__column">
+							<div class="about-company__row">
+								<div class="about-company__items">
+									<div class="about-company__bg-img"><img
+											src="images/Flag-about-company.svg" alt="Flag-about-company image"></div>
+									<div class="about-company__summ"><img src="images/2mlrd+.svg"
+											alt="2mlrd image"></div>
+									<div class="about-company__text">Установок</div>
+								</div>
+								<div class="about-company__items">
+									<div class="about-company__bg-img">
+										<img src="images/colba-about-company.svg"
+											alt="Colba-about-company image">
+									</div>
+									<div class="about-company__summ"><img src="images/500mln+.svg"
+											alt="2500mln+ image"></div>
+									<div class="about-company__text">Игроков</div>
+								</div>
+							</div>
+							<div class="about-company__row">
+								<div class="about-company__items">
+									<div class="about-company__bg-img">
+										<img src="images/cup-oabout-company.svg" alt="Cup-about-company image">
+									</div>
+									<div class="about-company__summ"><img src="images/250mln+.svg"
+											alt="250mln+ image"></div>
+									<div class="about-company__text">Активных юзеров в месяц</div>
+								</div>
+								<div class="about-company__items">
+									<div class="about-company__bg-img">
+										<img src="images/star-about-company.svg"
+											alt="Star-about-company image">
+									</div>
+									<div class="about-company__summ"><img src="images/500+.svg"
+											alt="500+ image"></div>
+									<div class="about-company__text">Сотрудников</div>
+								</div>
+							</div>
+						</div>
+						<div class="about-company__column">
+							<div class="about-company__comand">Команда</div>
+							<div class="about-company__comand-row">
+								<div class="about-company__red-block"></div>
+								<div class="about-company__black-block"></div>
+							</div>
+						</div>
 					</div>
 				</div>
 			</main>
