--- a/company.html
+++ b/company.html
@@ -49,13 +49,10 @@
 				</div>
 			</header>
 			<main class="main">
-				<div class="block-yellow"></div>
+				<div class="yellow-company"></div>
 				<div class="about-company">
 					<div class="about-company__container _container">
-						<div class="about-company__column">
-							<div class="about-company__title">О Студии</div>
-							<div class="about-company__row">
-								<div class="about-company__row-img">
+							<div class="about-company__row-img">
 									<a href="https://www.pinterest.com/"><img
 											src="images/Pintrest-footer.svg"
 											alt="Pintrest-about-company image"></a>
@@ -72,6 +69,11 @@
 											src="images/Facebook-footer.svg"
 											alt="Facebook-about-company image"></a>
 								</div>
+						<div class="about-company__column">
+							
+							<div class="about-company__title">О Студии</div>
+							<div class="about-company__row">
+							
 								<div class="about-company__text">
 									Toy.Stream сегодня — это команда из более 500 человек и офисы по всему
 									миру. Мы входим в топ-10 игровых разработчиков по установкам — общее
@@ -90,7 +92,7 @@
 											src="images/Flag-about-company.svg" alt="Flag-about-company image"></div>
 									<div class="about-company__summ"><img src="images/2mlrd+.svg"
 											alt="2mlrd image"></div>
-									<div class="about-company__text">Установок</div>
+									<div class="about-company__title-link">Установок</div>
 								</div>
 								<div class="about-company__items">
 									<div class="about-company__bg-img">
@@ -99,7 +101,7 @@
 									</div>
 									<div class="about-company__summ"><img src="images/500mln+.svg"
 											alt="2500mln+ image"></div>
-									<div class="about-company__text">Игроков</div>
+									<div class="about-company__title-link">Игроков</div>
 								</div>
 							</div>
 							<div class="about-company__row">
@@ -109,7 +111,7 @@
 									</div>
 									<div class="about-company__summ"><img src="images/250mln+.svg"
 											alt="250mln+ image"></div>
-									<div class="about-company__text">Активных юзеров в месяц</div>
+									<div class="about-company__title-link">Активных юзеров в месяц</div>
 								</div>
 								<div class="about-company__items">
 									<div class="about-company__bg-img">
@@ -118,14 +120,14 @@
 									</div>
 									<div class="about-company__summ"><img src="images/500+.svg"
 											alt="500+ image"></div>
-									<div class="about-company__text">Сотрудников</div>
+									<div class="about-company__title-link">Сотрудников</div>
 								</div>
 							</div>
 						</div>
 						<div class="about-company__column">
-							<div class="about-company__comand">Команда</div>
+							<div class="about-company__red-block"></div>
 							<div class="about-company__comand-row">
-								<div class="about-company__red-block"></div>
+							<a href="#" class="about-company__comand">Команда</a>
 								<div class="about-company__black-block"></div>
 							</div>
 						</div>
