--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 	<body>
 		<div class="wrapper">
 			<header class="header">
-				<div class="header__container _container">
+				<div class="header__container">
 					<div class="header__image-logo">
-						<img src="images/logo-menu.svg" alt="logo header hearts">
+						<a href="index.html"><img src="images/logo-menu.svg" alt="logo header hearts"></a>
 					</div>
 					<nav class="header__menu">
 						<ul class="header__items">
@@ -51,7 +51,7 @@
 			<main class="main">
 				<div class="block-yellow"></div>
 				<div class="top">
-					<div class="top__container _container">
+					<div class="top__container">
 						<div class="top__column">
 							<div class="top__title">Мы создаем мобильные игры, в которые играют
 								миллионы</div>
