--- a/command.html
+++ b/command.html
@@ -50,9 +50,9 @@
 				</div>
 			</header>
 			<main class="main">
-				<div class="yellow-company"></div>
-				<div class="about-company">
-					<div class="about-company__container">
+				<div class="yellow-command"></div>
+				<div class="command">
+					<div class="command__container">
 						<div class="about-company__row-img">
 							<a href="https://www.pinterest.com/"><img
 									src="images/Pintrest-footer.svg"
@@ -70,67 +70,74 @@
 									src="images/Facebook-footer.svg"
 									alt="Facebook-about-company image"></a>
 						</div>
-						<div class="about-company__column">
 
-							<div class="about-company__title">О Студии</div>
-							<div class="about-company__row">
+						<div class="command__column">
+							<div class="command__top-row">
+								<div class="command__title">Наша команда</div>
+								<div class="command__arrows">
+									<a href="#" class="command__link-arrow">
+										<img src="images/arrow-left.svg" alt>
+									</a>
+									<a href="#" class="command__link-arrow">
+										<img src="images/arrow-right.svg" alt>
+									</a>
+								</div>
+							</div>
+							<div class="command__row">
+								<div class="command__card">
+									<img src="images/Card-command.svg" alt="Card command image">
+									<div class="command__name">Алексей Олейник</div>
+									<div class="command__position">CEO (Chief Executive Officer)
+									</div>
+									<div class="command__text">
+										Наша студия разрабатывает мобильные игры в жанре Hyper Casual. Каждая
+										игра - это оригинальная идея, отточенные механики и проработанный
+										геймплеНаша студия разрабатывает мобильные игры в жанре Hyper Casual.
+										Каждая игра
 
-								<div class="about-company__text">
-									Toy.Stream сегодня — это команда из более 500 человек и офисы по всему
-									миру. Мы входим в топ-10 игровых разработчиков по установкам — общее
-									количество загрузок перевалило за 2 млрд, а ежемесячная аудитория
-									составляет более 250 млн игроков.
-									В разработке у нас всегда находится более десяти проектов одновременно.
-									Мы постоянно экспериментируем, ищем новые тренды и пробуем себя в новых
-									жанрах.
+									</div>
+								</div>
+								<div class="command__card">
+									<img src="images/Card-command.svg" alt="Card command image">
+									<div class="command__name">Алексей Олейник</div>
+									<div class="command__position">CEO (Chief Executive Officer)
+									</div>
+									<div class="command__text">
+										Наша студия разрабатывает мобильные игры в жанре Hyper Casual. Каждая
+										игра - это оригинальная идея, отточенные механики и проработанный
+										геймплеНаша студия разрабатывает мобильные игры в жанре Hyper Casual.
+										Каждая игра</div>
+								</div>
+								<div class="command__card">
+									<img src="images/Card-command.svg" alt="Card command image">
+									<div class="command__name">Алексей Олейник</div>
+									<div class="command__position">CEO (Chief Executive Officer)
+									</div>
+									<div class="command__text">
+										Наша студия разрабатывает мобильные игры в жанре Hyper Casual. Каждая
+										игра - это оригинальная идея, отточенные механики и проработанный
+										геймплеНаша студия разрабатывает мобильные игры в жанре Hyper Casual.
+										Каждая игра</div>
+								</div>
+								<div class="command__card">
+									<img src="images/Card-command.svg" alt="Card command image">
+									<div class="command__name">Алексей Олейник</div>
+									<div class="command__position">CEO (Chief Executive Officer)
+									</div>
+									<div class="command__text">
+										Наша студия разрабатывает мобильные игры в жанре Hyper Casual. Каждая
+										игра - это оригинальная идея, отточенные механики и проработанный
+										геймплеНаша студия разрабатывает мобильные игры в жанре Hyper Casual.
+										Каждая игра</div>
 								</div>
 							</div>
 						</div>
-						<div class="about-company__column">
-							<div class="about-company__row">
-								<div class="about-company__items">
-									<div class="about-company__bg-img"><img
-											src="images/Flag-about-company.svg" alt="Flag-about-company image"></div>
-									<div class="about-company__summ"><img src="images/2mlrd+.svg"
-											alt="2mlrd image"></div>
-									<div class="about-company__title-link">Установок</div>
-								</div>
-								<div class="about-company__items">
-									<div class="about-company__bg-img">
-										<img src="images/colba-about-company.svg"
-											alt="Colba-about-company image">
-									</div>
-									<div class="about-company__summ"><img src="images/500mln+.svg"
-											alt="2500mln+ image"></div>
-									<div class="about-company__title-link">Игроков</div>
-								</div>
+						<div class="command__column-block">
+							<div class="command__comand-row">
+								<a href="command.html" class="command__comand">О студии</a>
+								<div class="command__black-block"></div>
 							</div>
-							<div class="about-company__row">
-								<div class="about-company__items">
-									<div class="about-company__bg-img">
-										<img src="images/cup-oabout-company.svg" alt="Cup-about-company image">
-									</div>
-									<div class="about-company__summ"><img src="images/250mln+.svg"
-											alt="250mln+ image"></div>
-									<div class="about-company__title-link">Активных юзеров в месяц</div>
-								</div>
-								<div class="about-company__items">
-									<div class="about-company__bg-img">
-										<img src="images/star-about-company.svg"
-											alt="Star-about-company image">
-									</div>
-									<div class="about-company__summ"><img src="images/500+.svg"
-											alt="500+ image"></div>
-									<div class="about-company__title-link">Сотрудников</div>
-								</div>
-							</div>
-						</div>
-						<div class="about-company__column">
-							<div class="about-company__red-block"></div>
-							<div class="about-company__comand-row">
-								<a href="command.html" class="about-company__comand">Команда</a>
-								<div class="about-company__black-block"></div>
-							</div>
+							<div class="command__red-block"></div>
 						</div>
 					</div>
 				</div>
