--- a/command.html
+++ b/command.html
@@ -26,7 +26,7 @@
 								</a>
 							</li>
 							<li class="header__item">
-								<a href="game.html" class="header__link">Игры
+								<a href="games.html" class="header__link">Игры
 								</a>
 							</li>
 							<li class="header__item">
@@ -70,7 +70,6 @@
 									src="images/Facebook-footer.svg"
 									alt="Facebook-about-company image"></a>
 						</div>
-
 						<div class="command__column">
 							<div class="command__top-row">
 								<div class="command__title">Наша команда</div>
@@ -94,7 +93,6 @@
 										игра - это оригинальная идея, отточенные механики и проработанный
 										геймплеНаша студия разрабатывает мобильные игры в жанре Hyper Casual.
 										Каждая игра
-
 									</div>
 								</div>
 								<div class="command__card">
