--- a/company.html
+++ b/company.html
@@ -26,7 +26,7 @@
 								</a>
 							</li>
 							<li class="header__item">
-								<a href="game.html" class="header__link">Игры
+								<a href="games.html" class="header__link">Игры
 								</a>
 							</li>
 							<li class="header__item">
