--- a/games.html
+++ b/games.html
@@ -13,7 +13,8 @@
 			<header class="header">
 				<div class="header__container">
 					<div class="header__image-logo">
-						<a href="index.html"><img src="images/logo-menu.svg" alt="logo header hearts"></a>
+						<a href="index.html"><img src="images/logo-menu.svg"
+								alt="logo header hearts"></a>
 					</div>
 					<nav class="header__menu">
 						<ul class="header__items">
@@ -49,45 +50,53 @@
 				</div>
 			</header>
 			<main class="main">
-				<div class="block-yellow"></div>
-				<div class="top">
-					<div class="top__container">
-						<div class="top__column">
-							<div class="top__title">Мы создаем мобильные игры, в которые играют
-								миллионы</div>
-							<div class="top__row">
-								<div class="top__row-img">
-									<a href="https://www.pinterest.com/"><img 
-											src="images/Pintrest-footer.svg"
-											alt="Pintrest-top image"></a>
-									<a href="https://www.behance.net/"><img src="images/Behance-footer.svg"
-											alt="Behance-top image"></a>
-									<a href="https://dribbble.com/"><img src="images/Dribbble-footer.svg"
-											alt="Dribbble-top image"></a>
-									<a href="https://www.snapchat.com/"><img
-											src="images/Snapchat-footer.svg"
-											alt="Snapchat-top image"></a>
-									<a href="https://linkedin.com/"><img src="images/Linkedin-footer.svg"
-											alt="Linkedin-top image"></a>
-									<a href="https://www.facebook.com/"><img
-											src="images/Facebook-footer.svg"
-											alt="Facebook-top image"></a>
+				<div class="block-violet"></div>
+				<div class="game">
+					<div class="game__container">
+						<div class="game__row">
+							<div class="game__row-img">
+								<a href="https://www.pinterest.com/"><img
+										src="images/Pintrest-footer.svg"
+										alt="Pintrest-top image"></a>
+								<a href="https://www.behance.net/"><img src="images/Behance-footer.svg"
+										alt="Behance-top image"></a>
+								<a href="https://dribbble.com/"><img src="images/Dribbble-footer.svg"
+										alt="Dribbble-top image"></a>
+								<a href="https://www.snapchat.com/"><img
+										src="images/Snapchat-footer.svg"
+										alt="Snapchat-top image"></a>
+								<a href="https://linkedin.com/"><img src="images/Linkedin-footer.svg"
+										alt="Linkedin-top image"></a>
+								<a href="https://www.facebook.com/"><img
+										src="images/Facebook-footer.svg"
+										alt="Facebook-top image"></a>
+							</div>
+							<div class="game__column">
+
+								<div class="game__title">игры
 								</div>
-								<div class="top__romb">
-									<div class="top__text-romb"><a href="#"> Узнать
-										подробнее</a></div>
-									<div class="top__romb-row">
-									<a href="#"><img src="images/Arrow-main.svg" alt="Arrow imge"></a>	
+								<div class="game__text">
+									Toy.Stream сегодня — это команда из более 500 человек и офисы по всему
+									миру. Мы входим в топ-10 игровых разработчиков по установкам — общее
+									количество загрузок перевалило за 2 млрд, а ежемесячная аудитория
+									составляет более 250 млн игроков.
+								<div class="game__text">
+									В разработке у нас всегда находится более десяти проектов одновременно.
+									Мы постоянно экспериментируем, ищем новые тренды и пробуем себя в новых
+									жанрах.
+								</div>
+								</div>
+								<div class="game__romb">
+									<div class="game__text-romb"><a href="#"> Смотреть наши работы</a></div>
+									<div class="game__romb-row">
+										<a href="#"><img src="images/Arrow-main.svg" alt="Arrow imge"></a>
 									</div>
 								</div>
-								<div class="top__text">
-									«Оригинальные идеи, качество реализации игровых механик и внимание к
-									деталям интерфейса - наши основные принципы.»
-								</div>
+
 							</div>
 						</div>
-						<div class="top__image">
-						<img src="images/Unicorn-svg.svg" alt="Unicorn bg image"></div>
+						<div class="game__image">
+							<img src="images/game.svg" alt="Unicorn bg image"></div>
 					</div>
 				</div>
 			</main>
