--- a/games.html
+++ b/games.html
@@ -80,11 +80,13 @@
 									миру. Мы входим в топ-10 игровых разработчиков по установкам — общее
 									количество загрузок перевалило за 2 млрд, а ежемесячная аудитория
 									составляет более 250 млн игроков.
-								<div class="game__text">
-									В разработке у нас всегда находится более десяти проектов одновременно.
-									Мы постоянно экспериментируем, ищем новые тренды и пробуем себя в новых
-									жанрах.
-								</div>
+									<div class="game__text">
+										В разработке у нас всегда находится более десяти проектов
+										одновременно.
+										Мы постоянно экспериментируем, ищем новые тренды и пробуем себя в
+										новых
+										жанрах.
+									</div>
 								</div>
 								<div class="game__romb">
 									<div class="game__text-romb"><a href="#"> Смотреть наши работы</a></div>
@@ -96,7 +98,17 @@
 							</div>
 						</div>
 						<div class="game__image">
-							<img src="images/game.svg" alt="Unicorn bg image"></div>
+							<img src="images/game.svg" alt="Unicorn bg image">
+						</div>
+						<div class="game__blocks">
+							<div class="game__blocks-color">
+								<div class="game__red-block"></div>
+								<div class="game__black-block"></div>
+							</div>
+							<div class="game__block-link">
+								<a href="#">КОМАНДА</a>
+							</div>
+						</div>
 					</div>
 				</div>
 			</main>
