--- a/command.html
+++ b/command.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" href="css/style.min.css">
 
-		<title>Главная</title>
+		<title>Command</title>
 	</head>
 	<body>
 		<div class="wrapper">
@@ -130,12 +130,16 @@
 								</div>
 							</div>
 						</div>
+					
 						<div class="command__column-block">
-							<div class="command__comand-row">
-								<a href="command.html" class="command__comand">О студии</a>
-								<div class="command__black-block"></div>
+								<div class="command__link-block">
+								<a href="company.html">О СТУДИИ</a>
 							</div>
-							<div class="command__red-block"></div>
+							<div class="command__blocks-color">
+								<div class="command__black-block"></div>
+								<div class="command__red-block"></div>
+							</div>
+						
 						</div>
 					</div>
 				</div>
