--- a/games.html
+++ b/games.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" href="css/style.min.css">
 
-		<title>Главная</title>
+		<title>Games</title>
 	</head>
 	<body>
 		<div class="wrapper">
@@ -106,7 +106,7 @@
 								<div class="game__black-block"></div>
 							</div>
 							<div class="game__block-link">
-								<a href="#">КОМАНДА</a>
+								<a href="command.html">КОМАНДА</a>
 							</div>
 						</div>
 					</div>
