--- a/gamestwoo.html
+++ b/gamestwoo.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" href="css/style.min.css">
 
-		<title>Главная</title>
+		<title>Games Describes</title>
 	</head>
 	<body>
 		<div class="wrapper">
@@ -50,91 +50,57 @@
 				</div>
 			</header>
 			<main class="main">
-				<div class="yellow-company"></div>
-				<div class="about-company">
-					<div class="about-company__container">
-						<div class="about-company__row-img">
-							<a href="https://www.pinterest.com/"><img
-									src="images/Pintrest-footer.svg"
-									alt="Pintrest-about-company image"></a>
-							<a href="https://www.behance.net/"><img src="images/Behance-footer.svg"
-									alt="Behance-about-company image"></a>
-							<a href="https://dribbble.com/"><img src="images/Dribbble-footer.svg"
-									alt="Dribbble-about-company image"></a>
-							<a href="https://www.snapchat.com/"><img
-									src="images/Snapchat-footer.svg"
-									alt="Snapchat-about-company image"></a>
-							<a href="https://linkedin.com/"><img src="images/Linkedin-footer.svg"
-									alt="Linkedin-about-company image"></a>
-							<a href="https://www.facebook.com/"><img
-									src="images/Facebook-footer.svg"
-									alt="Facebook-about-company image"></a>
-						</div>
-						<div class="about-company__column">
+				<div class="block-violet"></div>
+				<div class="game">
+					<div class="game__container">
+						<div class="game__row">
+							<div class="game__row-img">
+								<a href="https://www.pinterest.com/"><img
+										src="images/Pintrest-footer.svg"
+										alt="Pintrest-top image"></a>
+								<a href="https://www.behance.net/"><img src="images/Behance-footer.svg"
+										alt="Behance-top image"></a>
+								<a href="https://dribbble.com/"><img src="images/Dribbble-footer.svg"
+										alt="Dribbble-top image"></a>
+								<a href="https://www.snapchat.com/"><img
+										src="images/Snapchat-footer.svg"
+										alt="Snapchat-top image"></a>
+								<a href="https://linkedin.com/"><img src="images/Linkedin-footer.svg"
+										alt="Linkedin-top image"></a>
+								<a href="https://www.facebook.com/"><img
+										src="images/Facebook-footer.svg"
+										alt="Facebook-top image"></a>
+							</div>
+							<div class="game__column">
 
-							<div class="about-company__title">О Студии</div>
-							<div class="about-company__row">
-
-								<div class="about-company__text">
+								<div class="game__title">игры
+								</div>
+								<div class="game__text">
 									Toy.Stream сегодня — это команда из более 500 человек и офисы по всему
 									миру. Мы входим в топ-10 игровых разработчиков по установкам — общее
 									количество загрузок перевалило за 2 млрд, а ежемесячная аудитория
 									составляет более 250 млн игроков.
-									В разработке у нас всегда находится более десяти проектов одновременно.
-									Мы постоянно экспериментируем, ищем новые тренды и пробуем себя в новых
-									жанрах.
-								</div>
-							</div>
-						</div>
-						<div class="about-company__column">
-							<div class="about-company__row">
-								<div class="about-company__items">
-									<div class="about-company__bg-img"><img
-											src="images/Flag-about-company.svg" alt="Flag-about-company image"></div>
-									<div class="about-company__summ"><img src="images/2mlrd+.svg"
-											alt="2mlrd image"></div>
-									<div class="about-company__title-link">Установок</div>
-								</div>
-								<div class="about-company__items">
-									<div class="about-company__bg-img">
-										<img src="images/colba-about-company.svg"
-											alt="Colba-about-company image">
+									<div class="game__text">
+										В разработке у нас всегда находится более десяти проектов
+										одновременно.
+										Мы постоянно экспериментируем, ищем новые тренды и пробуем себя в
+										новых
+										жанрах.
 									</div>
-									<div class="about-company__summ"><img src="images/500mln+.svg"
-											alt="2500mln+ image"></div>
-									<div class="about-company__title-link">Игроков</div>
 								</div>
-							</div>
-							<div class="about-company__row">
-								<div class="about-company__items">
-									<div class="about-company__bg-img">
-										<img src="images/cup-oabout-company.svg" alt="Cup-about-company image">
+								<div class="game__romb">
+									<div class="game__text-romb"><a href="#"> Смотреть наши работы</a></div>
+									<div class="game__romb-row">
+										<a href="#"><img src="images/Arrow-main.svg" alt="Arrow imge"></a>
 									</div>
-									<div class="about-company__summ"><img src="images/250mln+.svg"
-											alt="250mln+ image"></div>
-									<div class="about-company__title-link">Активных юзеров в месяц</div>
 								</div>
-								<div class="about-company__items">
-									<div class="about-company__bg-img">
-										<img src="images/star-about-company.svg"
-											alt="Star-about-company image">
-									</div>
-									<div class="about-company__summ"><img src="images/500+.svg"
-											alt="500+ image"></div>
-									<div class="about-company__title-link">Сотрудников</div>
-								</div>
+
 							</div>
 						</div>
-							<div class="game__blocks">
-							<div class="game__blocks-color">
-								<div class="game__red-block"></div>
-								<div class="game__black-block"></div>
-							</div>
-							<div class="game__block-link">
-								<a href="command.html">КОМАНДА</a>
-							</div>
+						<div class="game__image">
+							<img src="images/game.svg" alt="Unicorn bg image">
 						</div>
-						</div>
+						
 					</div>
 				</div>
 			</main>
@@ -153,7 +119,7 @@
 								</a>
 							</li>
 							<li class="footer__item">
-								<a href="game.html" class="footer__link">Игры
+								<a href="games.html" class="footer__link">Игры
 								</a>
 							</li>
 							<li class="footer__item">
