--- a/games.html
+++ b/games.html
@@ -91,7 +91,7 @@
 								<div class="game__romb">
 									<div class="game__text-romb"><a href="#"> Смотреть наши работы</a></div>
 									<div class="game__romb-row">
-										<a href="#"><img src="images/Arrow-main.svg" alt="Arrow imge"></a>
+										<a href="gamestwoo.html"><img src="images/Arrow-main.svg" alt="Arrow imge"></a>
 									</div>
 								</div>
 
