--- a/gamestwoo.html
+++ b/gamestwoo.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" href="css/style.min.css">
 
-		<title>Games Describes</title>
+		<title>GamesSecond</title>
 	</head>
 	<body>
 		<div class="wrapper">
@@ -51,56 +51,208 @@
 			</header>
 			<main class="main">
 				<div class="block-violet"></div>
-				<div class="game">
-					<div class="game__container">
-						<div class="game__row">
-							<div class="game__row-img">
-								<a href="https://www.pinterest.com/"><img
-										src="images/Pintrest-footer.svg"
-										alt="Pintrest-top image"></a>
-								<a href="https://www.behance.net/"><img src="images/Behance-footer.svg"
-										alt="Behance-top image"></a>
-								<a href="https://dribbble.com/"><img src="images/Dribbble-footer.svg"
-										alt="Dribbble-top image"></a>
-								<a href="https://www.snapchat.com/"><img
-										src="images/Snapchat-footer.svg"
-										alt="Snapchat-top image"></a>
-								<a href="https://linkedin.com/"><img src="images/Linkedin-footer.svg"
-										alt="Linkedin-top image"></a>
-								<a href="https://www.facebook.com/"><img
-										src="images/Facebook-footer.svg"
-										alt="Facebook-top image"></a>
-							</div>
-							<div class="game__column">
+				<div class="gamesecond">
+					<div class="gamesecond__container _container">
+						<div class="gamesecond__column">
 
-								<div class="game__title">игры
+							<div class="game__row">
+								<div class="gamesecond__row-img">
+									<a href="https://www.pinterest.com/"><img
+											src="images/Pintrest-footer.svg"
+											alt="Pintrest-top image"></a>
+									<a href="https://www.behance.net/"><img src="images/Behance-footer.svg"
+											alt="Behance-top image"></a>
+									<a href="https://dribbble.com/"><img src="images/Dribbble-footer.svg"
+											alt="Dribbble-top image"></a>
+									<a href="https://www.snapchat.com/"><img
+											src="images/Snapchat-footer.svg"
+											alt="Snapchat-top image"></a>
+									<a href="https://linkedin.com/"><img src="images/Linkedin-footer.svg"
+											alt="Linkedin-top image"></a>
+									<a href="https://www.facebook.com/"><img
+											src="images/Facebook-footer.svg"
+											alt="Facebook-top image"></a>
 								</div>
-								<div class="game__text">
-									Toy.Stream сегодня — это команда из более 500 человек и офисы по всему
-									миру. Мы входим в топ-10 игровых разработчиков по установкам — общее
-									количество загрузок перевалило за 2 млрд, а ежемесячная аудитория
-									составляет более 250 млн игроков.
+								<div class="game__column">
+
+									<div class="gamesecond__title">Design Masters
+									</div>
 									<div class="game__text">
-										В разработке у нас всегда находится более десяти проектов
-										одновременно.
-										Мы постоянно экспериментируем, ищем новые тренды и пробуем себя в
-										новых
-										жанрах.
+										Станьте дизайнером интерьеров!
+										<div class="game__text">
+											Проходите уровни матч-3, создавайте собственные дизайны и интерьеры,
+											следите за историей и знакомьтесь с персонажами.
+										</div>
+									</div>
+									<div class="gamesecond__romb">
+										<div class="gamesecond__text-romb"><a href="#">Подробнее</a></div>
+										<div class="gamesecond__romb-row">
+											<a href="#"><img src="images/Arrow-main.svg" alt="Arrow imge"></a>
+										</div>
+									</div>
+
+								</div>
+								<div class="game__image">
+									<img src="images/design-master.jpg" alt="Unicorn bg image">
+								</div>
+							</div>
+
+						</div>
+						<div class="gamesecond__column">
+
+							<div class="game__row">
+								<div class="game__image">
+									<img src="images/perfect-makeup.jpg" alt="Unicorn bg image">
+								</div>
+								<div class="game__column">
+
+									<div class="gamesecond__title">Design Masters
+									</div>
+									<div class="game__text">
+										Станьте дизайнером интерьеров!
+										<div class="game__text">
+											Проходите уровни матч-3, создавайте собственные дизайны и интерьеры,
+											следите за историей и знакомьтесь с персонажами.
+										</div>
+									</div>
+									<div class="gamesecond__romb">
+										<div class="gamesecond__text-romb"><a href="#">Подробнее</a></div>
+										<div class="gamesecond__romb-row">
+											<a href="#"><img src="images/Arrow-main.svg" alt="Arrow imge"></a>
+										</div>
+									</div>
+
+								</div>
+							</div>
+						</div>
+						<div class="gamesecond__column">
+							<div class="game__row">
+								<div class="game__column">
+									<div class="gamesecond__title">Escape Masters
+									</div>
+									<div class="game__text">
+										Совершите идеальный побег!
+										<div class="game__text">
+											Спаси напарников, собери сокровища и прокопай путь к свободе, но
+											опасайся ловушек.
+										</div>
+									</div>
+									<div class="gamesecond__romb">
+										<div class="gamesecond__text-romb"><a href="#">Подробнее</a></div>
+										<div class="gamesecond__romb-row">
+											<a href="#"><img src="images/Arrow-main.svg" alt="Arrow imge"></a>
+										</div>
 									</div>
 								</div>
-								<div class="game__romb">
-									<div class="game__text-romb"><a href="#"> Смотреть наши работы</a></div>
-									<div class="game__romb-row">
-										<a href="#"><img src="images/Arrow-main.svg" alt="Arrow imge"></a>
+								<div class="game__image">
+									<img src="images/escape-masters.jpg" alt="Unicorn bg image">
+								</div>
+							</div>
+						</div>
+						<div class="gamesecond__column">
+							<div class="game__row">
+								<div class="game__image">
+									<img src="images//hitmasters.jpg" alt="Unicorn bg image">
+								</div>
+								<div class="game__column">
+									<div class="gamesecond__title">Hitmasters
+									</div>
+									<div class="game__text">
+										Стань стрелком и срази всех врагов!
+										<div class="game__text">
+											Целься метко, используй объекты на уровнях и не дай никому спастись!
+											Открывай новое оружие, пополняй свой арсенал и проходи головоломки.
+										</div>
+									</div>
+									<div class="gamesecond__romb">
+										<div class="gamesecond__text-romb"><a href="#">Подробнее</a></div>
+										<div class="gamesecond__romb-row">
+											<a href="#"><img src="images/Arrow-main.svg" alt="Arrow imge"></a>
+										</div>
 									</div>
 								</div>
 
 							</div>
 						</div>
-						<div class="game__image">
-							<img src="images/game.svg" alt="Unicorn bg image">
+						<div class="gamesecond__button">
+							<div class="gamesecond__btn">
+								<a href="#" class="gamesecond__link-text">Больше
+									проектов</a>
+								<div class="gamesecond__link-arrow"">
+									<a href="#"><img src="images/Arrow-main.svg" alt="Arrow imge"></a></div>
+							</div>
 						</div>
-						
+						<div class="gamesecond__column-game">
+							<div class="gamesecond__top-row">
+								<div class="gamesecond__title">Последние проекты</div>
+								<div class="gamesecond__arrows">
+									<a href="#" class="command__link-arrow">
+										<img src="images/arrow-left.svg" alt>
+									</a>
+									<a href="#" class="gamesecond_link-arrow">
+										<img src="images/arrow-right.svg" alt>
+									</a>
+								</div>
+							</div>
+							<div class="gamesecond__row">
+								<div class="gamesecond__column">
+									<div class="gamesecond__card">
+										<img src="images/last-project.jpg" alt="last-project image">
+										<div class="command__name">Hitmasters
+										</div>
+										<div class="command__text">
+											Стань стрелком и срази всех врагов!
+
+											Целься метко, используй объекты на уровнях и не дай никому спастись!
+											Открывай новое оружие, пополняй свой арсенал и проходи головоломки.
+										</div>
+										<div class="gamesecond__card-button">
+											<div class="gamesecond__card-btn">
+												<a href="#" class="gamesecond__card-text">Подробнее</a>
+												<div class="gamesecond__card-arrow"">
+													<a href="#"><img src="images/Arrow-main.svg" alt="Arrow imge"></a></div>
+											</div>
+										</div>
+									</div>
+								</div>
+								<div class="gamesecond__column">
+									<div class="gamesecond__card">
+										<img src="images/last-project.jpg" alt="last-project image">
+										<div class="command__name">Escape Masters</div>
+										<div class="command__text">
+											Escape Masters Совершите идеальный побег! Спаси напарников, собери
+											сокровища и прокопай путь к свободе, но опасайся ловушек.</div>
+										<div class="gamesecond__card-button">
+											<div class="gamesecond__card-btn">
+												<a href="#" class="gamesecond__card-text">Подробнее</a>
+												<div class="gamesecond__card-arrow"">
+													<a href="#"><img src="images/Arrow-main.svg" alt="Arrow imge"></a></div>
+											</div>
+										</div>
+									</div>
+								</div>
+								<div class="gamesecond__column">
+									<div class="gamesecond__card">
+										<img src="images/last-project.jpg" alt="last-project image">
+										<div class="command__name">Perfect Makeup 3D</div>
+										<div class="command__text">
+											Стань стрелком и срази всех врагов! Целься метко, используй объекты
+											на
+											уровнях и не дай никому спастись! Открывай новое оружие, пополняй
+											свой
+											арсенал и проходи головоломки.</div>
+										<div class="gamesecond__card-button">
+											<div class="gamesecond__card-btn">
+												<a href="#" class="gamesecond__card-text">Подробнее</a>
+												<div class="gamesecond__card-arrow"">
+													<a href="#"><img src="images/Arrow-main.svg" alt="Arrow imge"></a></div>
+											</div>
+										</div>
+									</div>
+
+								</div>
+							</div>
+						</div>
 					</div>
 				</div>
 			</main>
