--- a/command.html
+++ b/command.html
@@ -74,10 +74,10 @@
 							<div class="command__top-row">
 								<div class="command__title">Наша команда</div>
 								<div class="command__arrows">
-									<a href="#" class="command__link-arrow">
+									<a href="command.html" class="command__link-arrow">
 										<img src="images/arrow-left.svg" alt>
 									</a>
-									<a href="#" class="command__link-arrow">
+									<a href="command.html" class="command__link-arrow">
 										<img src="images/arrow-right.svg" alt>
 									</a>
 								</div>
