--- a/games.html
+++ b/games.html
@@ -89,7 +89,7 @@
 									</div>
 								</div>
 								<div class="game__romb">
-									<div class="game__text-romb"><a href="#"> Смотреть наши работы</a></div>
+									<div class="game__text-romb"><a href="gamestwoo.html"> Смотреть наши работы</a></div>
 									<div class="game__romb-row">
 										<a href="gamestwoo.html"><img src="images/Arrow-main.svg" alt="Arrow imge"></a>
 									</div>
