--- a/gamestwoo.html
+++ b/gamestwoo.html
@@ -189,7 +189,7 @@
 									<a href="#" class="command__link-arrow">
 										<img src="images/arrow-left.svg" alt>
 									</a>
-									<a href="#" class="gamesecond_link-arrow">
+									<a href="#" class="gamesecond__link-arrow">
 										<img src="images/arrow-right.svg" alt>
 									</a>
 								</div>
