--- a/gamestwoo.html
+++ b/gamestwoo.html
@@ -99,7 +99,6 @@
 
 						</div>
 						<div class="gamesecond__column">
-
 							<div class="game__row">
 								<div class="game__image">
 									<img src="images/perfect-makeup.jpg" alt="Unicorn bg image">
@@ -186,7 +185,7 @@
 							<div class="gamesecond__top-row">
 								<div class="gamesecond__title">Последние проекты</div>
 								<div class="gamesecond__arrows">
-									<a href="#" class="command__link-arrow">
+									<a href="#" class="gamesecond__link-arrow">
 										<img src="images/arrow-left.svg" alt>
 									</a>
 									<a href="#" class="gamesecond__link-arrow">
@@ -197,7 +196,9 @@
 							<div class="gamesecond__row">
 								<div class="gamesecond__column">
 									<div class="gamesecond__card">
-										<img src="images/last-project.jpg" alt="last-project image">
+										<div class="gamesecond__image">
+											<img src="images/last-project.jpg" alt="last-project image">
+										</div>
 										<div class="command__name">Hitmasters
 										</div>
 										<div class="command__text">
@@ -215,9 +216,10 @@
 										</div>
 									</div>
 								</div>
-								<div class="gamesecond__column">
+									<div class="gamesecond__column">
 									<div class="gamesecond__card">
-										<img src="images/last-project.jpg" alt="last-project image">
+										<div class="gamesecond__image">
+										<img src="images/last-project.jpg" alt="last-project image"></div>
 										<div class="command__name">Escape Masters</div>
 										<div class="command__text">
 											Escape Masters Совершите идеальный побег! Спаси напарников, собери
@@ -233,7 +235,8 @@
 								</div>
 								<div class="gamesecond__column">
 									<div class="gamesecond__card">
-										<img src="images/last-project.jpg" alt="last-project image">
+										<div class="gamesecond__image">
+										<img src="images/last-project.jpg" alt="last-project image"></div>
 										<div class="command__name">Perfect Makeup 3D</div>
 										<div class="command__text">
 											Стань стрелком и срази всех врагов! Целься метко, используй объекты
