--- a/career.html
+++ b/career.html
@@ -78,9 +78,9 @@
 								расстояния не мешают нам создавать хиты для миллионов игроков.
 							</div>
 							<div class="career__romb">
-								<div class="career__text-romb"><a href="gamestwoo.html"> Вакансии</a></div>
+								<div class="career__text-romb"><a href="vacancy.html"> Вакансии</a></div>
 								<div class="career__romb-row">
-									<a href="gamestwoo.html"><img src="images/arrow-career.svg"
+									<a href="vacancy.html"><img src="images/arrow-career.svg"
 											alt="Arrow imge"></a>
 								</div>
 							</div>
